--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,9 +2,9 @@
     "type": "postgres",
     "port": 5432,
     "host": "localhost",
-    "username": "boraAdmin",
-    "password": "AdminBora#123@",
-    "database": "bora",
+    "username": "financesAdmin",
+    "password": "AdminFinances#123@",
+    "database": "finances",
     "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
     "entities": ["./src/modules/**/entities/*.ts"],
     "cli": {
