--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.7'
 
 services:
-    database_bora:
+    database_finances:
         image: postgres
-        container_name: database_bora
+        container_name: database_finances
         restart: always
         ports:
           - 5432:5432
@@ -13,9 +13,10 @@ services:
           - POSTGRES_DB=bora
         volumes:
             - pgdata:/data/postgres
-     api_projeto:
+
+     api_finances:
         build: .
-        container_name: api_projeto
+        container_name: api_finances
         ports:
           - 3333:3333
           - 9229:9229
