ajustando a criação do banco de dados

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,8 +2,8 @@
     "type": "postgres",
     "port": 5432,
     "host": "localhost",
-    "username": "financesAdmin",
-    "password": "AdminFinances#123@",
+    "username": "boraAdmin",
+    "password": "AdminBora#123@",
     "database": "finances",
     "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
     "entities": ["./src/modules/**/entities/*.ts"],
