--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,31 @@
 version: '3.7'
 
 services:
-    database_finances:
-        image: postgres
-        container_name: database_finances
-        restart: always
-        ports:
-          - 5432:5432
-        environment:
-          - POSTGRES_USER=boraAdmin
-          - POSTGRES_PASSWORD=AdminBora#123@
-          - POSTGRES_DB=bora
-        volumes:
-            - pgdata:/data/postgres
+  database_finances:
+      image: postgres
+      container_name: database_finances
+      restart: always
+      ports:
+        - 5432:5432
+      environment:
+        - POSTGRES_USER=boraAdmin
+        - POSTGRES_PASSWORD=AdminBora#123@
+        - POSTGRES_DB=bora
+      volumes:
+          - pgdata:/data/postgres
 
-     api_finances:
-        build: .
-        container_name: api_finances
-        ports:
-          - 3333:3333
-          - 9229:9229
-        volumes:
-            - .:/usr/app
-        links:
-            - database_bora
-        depends_on: 
-            - database_bora
+  api_finances:
+    build: .
+    container_name: api_finances
+    ports:
+      - 3333:3333
+      - 9229:9229
+    volumes:
+        - .:/usr/app
+    links:
+        - database_finances
+    depends_on: 
+        - database_finances
 
 volumes:
     pgdata:
