--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,19 @@ version: '3.7'
 
 services:
   database_finances:
-      image: postgres
-      container_name: database_finances
-      restart: always
-      ports:
-        - 5432:5432
-      environment:
-        - POSTGRES_USER=boraAdmin
-        - POSTGRES_PASSWORD=AdminBora#123@
-        - POSTGRES_DB=finances
-      volumes:
-          - pgdata:/data/postgres
+    image: postgres
+    container_name: database_finances
+    restart: always
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_USER=boraAdmin
+      - POSTGRES_PASSWORD=AdminBora#123@
+      - POSTGRES_DB=finances
+      - TZ=America/Sao_Paulo
+      - PGTZ=America/Sao_Paulo
+    volumes:
+      - pgdata:/var/lib/postgresql/data
 
   api_finances:
     build: .
@@ -21,12 +23,10 @@ services:
       - 3333:3333
       - 9229:9229
     volumes:
-        - .:/usr/app
-    links:
-        - database_finances
+      - .:/usr/app
     depends_on: 
-        - database_finances
+      - database_finances
 
 volumes:
-    pgdata:
-        driver: local
+  pgdata:
+    driver: local
