--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dependencies": {
         "bcrypt": "^5.0.1",
         "cors": "^2.8.5",
-        "dayjs": "^1.11.7",
+        "dayjs": "^1.11.9",
+        "dayjs-ext": "^2.2.0",
         "express": "^4.17.2",
         "express-async-errors": "^3.1.1",
         "jsonwebtoken": "^9.0.0",
