--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "cors": "^2.8.5",
         "dayjs": "^1.11.9",
         "dayjs-ext": "^2.2.0",
+        "dotenv": "^16.3.1",
         "express": "^4.17.2",
         "express-async-errors": "^3.1.1",
         "jsonwebtoken": "^9.0.0",
