--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "scripts": {
         "dev": "ts-node-dev -r tsconfig-paths/register --inspect=0.0.0.0:9229 --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
         "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
-        "lint": "eslint src --ext .ts --fix"
+        "lint": "eslint src --ext .ts --fix",
+        "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files"
     },
     "dependencies": {
+        "@babel/core": "^7.22.9",
+        "@babel/node": "^7.22.6",
+        "@babel/plugin-proposal-class-properties": "^7.18.6",
+        "@babel/plugin-proposal-decorators": "^7.22.7",
+        "@babel/preset-env": "^7.22.9",
+        "@babel/preset-typescript": "^7.22.5",
+        "babel-plugin-module-resolver": "^5.0.0",
+        "babel-plugin-transform-typescript-metadata": "^0.3.2",
         "bcrypt": "^5.0.1",
         "cors": "^2.8.5",
         "dayjs": "^1.11.9",
