--- a/package.json
+++ b/package.json
@@ -10,14 +10,6 @@
         "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files"
     },
     "dependencies": {
-        "@babel/core": "^7.22.9",
-        "@babel/node": "^7.22.6",
-        "@babel/plugin-proposal-class-properties": "^7.18.6",
-        "@babel/plugin-proposal-decorators": "^7.22.7",
-        "@babel/preset-env": "^7.22.9",
-        "@babel/preset-typescript": "^7.22.5",
-        "babel-plugin-module-resolver": "^5.0.0",
-        "babel-plugin-transform-typescript-metadata": "^0.3.2",
         "bcrypt": "^5.0.1",
         "cors": "^2.8.5",
         "dayjs": "^1.11.9",
@@ -44,6 +36,15 @@
         "ts-jest": "^29.0.1",
         "ts-node-dev": "^2.0.0",
         "tsconfig-paths": "^4.1.0",
-        "typescript": "^4.7.3"
+        "typescript": "^4.7.3",
+        "@babel/cli": "^7.20.7",
+        "@babel/core": "^7.20.12",
+        "@babel/node": "^7.20.7",
+        "@babel/plugin-proposal-class-properties": "^7.18.6",
+        "@babel/plugin-proposal-decorators": "^7.20.13",
+        "@babel/preset-env": "^7.20.2",
+        "@babel/preset-typescript": "^7.18.6",
+        "babel-plugin-module-resolver": "^5.0.0",
+        "babel-plugin-transform-typescript-metadata": "^0.3.2"
     }
 }
