--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,11 @@ services:
     restart: always
     ports:
       - 5430:5432
-    environment:
-      - POSTGRES_USER=boraAdmin
-      - POSTGRES_PASSWORD=AdminBora#123@
-      - POSTGRES_DB=finances
+      env_file: .env
+      environment:
+        - POSTGRES_USER=$POSTGRES_USER
+        - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+        - POSTGRES_DB=$POSTGRES_DB
       - TZ=America/Sao_Paulo
       - PGTZ=America/Sao_Paulo
     volumes:
