--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "name": "apifinances",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "src/shared/infra/http/server.ts",
     "license": "MIT",
     "scripts": {
+        "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
         "dev": "ts-node-dev -r tsconfig-paths/register --inspect=0.0.0.0:9229 --transpile-only --ignore-watch node_modules --respawn src/shared/infra/http/server.ts",
         "typeorm": "ts-node-dev ./node_modules/typeorm/cli",
-        "lint": "eslint src --ext .ts --fix",
-        "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files"
+        "lint": "eslint src --ext .ts --fix"
     },
     "dependencies": {
         "bcrypt": "^5.0.1",
@@ -26,17 +26,6 @@
         "uuid": "^8.3.2"
     },
     "devDependencies": {
-        "@rocketseat/eslint-config": "^1.2.0",
-        "@types/bcrypt": "^5.0.0",
-        "@types/cors": "^2.8.13",
-        "@types/express": "^4.17.13",
-        "@types/jsonwebtoken": "^8.5.9",
-        "@types/uuid": "^8.3.4",
-        "eslint": "^8.42.0",
-        "ts-jest": "^29.0.1",
-        "ts-node-dev": "^2.0.0",
-        "tsconfig-paths": "^4.1.0",
-        "typescript": "^4.7.3",
         "@babel/cli": "^7.20.7",
         "@babel/core": "^7.20.12",
         "@babel/node": "^7.20.7",
@@ -44,7 +33,18 @@
         "@babel/plugin-proposal-decorators": "^7.20.13",
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-typescript": "^7.18.6",
+        "@rocketseat/eslint-config": "^1.2.0",
+        "@types/bcrypt": "^5.0.0",
+        "@types/cors": "^2.8.13",
+        "@types/express": "^4.17.13",
+        "@types/jsonwebtoken": "^8.5.9",
+        "@types/uuid": "^8.3.4",
         "babel-plugin-module-resolver": "^5.0.0",
-        "babel-plugin-transform-typescript-metadata": "^0.3.2"
+        "babel-plugin-transform-typescript-metadata": "^0.3.2",
+        "eslint": "^8.42.0",
+        "ts-jest": "^29.0.1",
+        "ts-node-dev": "^2.0.0",
+        "tsconfig-paths": "^4.1.0",
+        "typescript": "^4.7.3"
     }
 }
